--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.2.0",
   "scripts": {
     "dev:front_end": "vite --host",
-    "dev:data_service": "npx serve ../rath-client/public -l 8080",
-    "dev": "concurrently \"npm run dev:front_end\" \"npm run dev:data_service\"",
+    "dev": "npm run dev:front_end",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist"
@@ -52,11 +51,15 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x",
     "@types/uuid": "^8.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.3.2",
     "vite": "^3.1.0"
+  },
+  "resolutions": {
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x"
   }
 }
