--- a/package.json
+++ b/package.json
@@ -1,65 +1,25 @@
 {
-  "name": "@kanaries/graphic-walker",
-  "version": "0.2.0",
+  "name": "graphic-walker-home",
+  "version": "1.0.0",
+  "description": "![](https://img.shields.io/github/license/kanaries/graphic-walker) ![](https://img.shields.io/npm/v/@kanaries/graphic-walker) ![](https://img.shields.io/github/workflow/status/kanaries/graphic-walker/Auto%20Build)",
+  "private": true,
+  "dependencies": {},
+  "devDependencies": {},
   "scripts": {
-    "dev:front_end": "vite --host",
-    "dev": "npm run dev:front_end",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "files": [
-    "dist"
-  ],
-  "license": "AGPL",
-  "main": "./dist/graphic-walker.umd.js",
-  "module": "./dist/graphic-walker.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/graphic-walker.es.js",
-      "require": "./dist/graphic-walker.umd.js"
-    }
+  "workspaces": {
+    "packages": ["packages/*"]
   },
-  "prettier": {
-    "tabWidth": 4
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kanaries/graphic-walker.git"
   },
-  "types": "./dist/index.d.ts",
-  "dependencies": {
-    "@heroicons/react": "^2.0.8",
-    "@kanaries/web-data-loader": "0.1.5",
-    "autoprefixer": "^10.3.5",
-    "i18next": "^21.9.1",
-    "i18next-browser-languagedetector": "^6.1.5",
-    "immer": "^9.0.15",
-    "mobx": "^6.3.3",
-    "mobx-react-lite": "^3.2.1",
-    "postcss": "^8.3.7",
-    "re-resizable": "^6.9.8",
-    "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-dom": "^17.0.2",
-    "react-i18next": "^11.18.6",
-    "react-json-view": "^1.21.3",
-    "rxjs": "^7.3.0",
-    "styled-components": "^5.3.0",
-    "tailwindcss": "^2.2.15",
-    "uuid": "^8.3.2",
-    "vega": "^5.22.1",
-    "vega-embed": "^6.20.8",
-    "vega-lite": "^5.2.0",
-    "visual-insights": "0.7.15"
+  "keywords": [],
+  "author": "",
+  "license": "Apache 2.0",
+  "bugs": {
+    "url": "https://github.com/Kanaries/graphic-walker/issues"
   },
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@types/react": "^17.x",
-    "@types/react-dom": "^17.x",
-    "@types/uuid": "^8.3.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "typescript": "^4.3.2",
-    "vite": "^3.1.0"
-  },
-  "resolutions": {
-    "@types/react": "^17.x",
-    "@types/react-dom": "^17.x"
-  }
+  "homepage": "https://github.com/Kanaries/graphic-walker#readme"
 }
