--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -42,13 +42,10 @@
     "mobx-react-lite": "^3.2.1",
     "postcss": "^8.3.7",
     "re-resizable": "^6.9.8",
-    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^17.0.2",
     "react-i18next": "^11.18.6",
     "react-json-view": "^1.21.3",
     "rxjs": "^7.3.0",
-    "styled-components": "^5.3.6",
     "tailwindcss": "^2.2.15",
     "uuid": "^8.3.2",
     "vega": "^5.22.1",
@@ -66,5 +63,10 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "typescript": "^4.3.2",
     "vite": "^3.1.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.6"
   }
 }
