--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -61,6 +61,7 @@
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "styled-components": "^5.3.6",
     "typescript": "^4.3.2",
     "vite": "^3.1.0"
   },
