--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "build:app": "vite build --config vite-app.config.ts",
     "serve": "vite preview",
-    "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist"
+    "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
+    "postinstall": "patch-package"
   },
   "files": [
     "dist",
@@ -61,6 +62,8 @@
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "patch-package": "^6.5.0",
+    "postinstall-postinstall": "^2.1.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.3.2",
     "vite": "^3.1.0"
