--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kanaries/graphic-walker",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "scripts": {
     "dev:front_end": "vite --host",
     "dev": "npm run dev:front_end",
@@ -41,7 +41,9 @@
     "immer": "^9.0.15",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
+    "patch-package": "^6.5.0",
     "postcss": "^8.3.7",
+    "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
     "react-beautiful-dnd": "^13.1.1",
     "react-i18next": "^11.18.6",
