--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -17,4 +17,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: yarn install
+      - run: yarn patch-package
       - run: yarn workspace @kanaries/graphic-walker build
