--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -48,6 +48,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-i18next": "^11.18.6",
     "react-json-view": "^1.21.3",
+    "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^2.2.15",
     "uuid": "^8.3.2",
