--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@kanaries/graphic-walker": "^0.2.0",
     "@tauri-apps/api": "^1.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^17.x",
+    "react-dom": "^17.x"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.0",
     "@types/node": "^18.7.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x",
     "@vitejs/plugin-react": "^2.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.2"
