--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -13,7 +13,7 @@
     "dist",
     "src"
   ],
-  "license": "AGPL",
+  "license": "Apache-2.0",
   "main": "./dist/graphic-walker.umd.js",
   "module": "./dist/graphic-walker.es.js",
   "exports": {
