--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -62,10 +62,10 @@
     "@types/react-dom": "^17.x",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^3.1.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.3.2",
-    "vite": "^3.1.0"
+    "vite": "^4.1.1"
   },
   "peerDependencies": {
     "react": "^17.0.2",
