--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -16,5 +16,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: yarn
       - run: yarn install
       - run: yarn workspace @kanaries/graphic-walker build
