--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -62,6 +62,7 @@
     "@types/react-dom": "^17.x",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.1",
+    "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "styled-components": "^5.3.6",
     "typescript": "^4.3.2",
