--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -32,6 +32,7 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "0.0.1",
     "@kanaries/web-data-loader": "0.1.5",
