--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -36,6 +36,7 @@
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "0.0.1",
     "@kanaries/web-data-loader": "0.1.5",
+    "@tailwindcss/container-queries": "^0.1.0",
     "autoprefixer": "^10.3.5",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
