--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -35,7 +35,7 @@
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "0.0.1",
-    "@kanaries/web-data-loader": "0.1.5",
+    "@kanaries/web-data-loader": "^0.1.7",
     "autoprefixer": "^10.3.5",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
