--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -34,7 +34,6 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.8",
-    "@kanaries/react-beautiful-dnd": "0.0.1",
     "@kanaries/web-data-loader": "^0.1.7",
     "@tailwindcss/container-queries": "^0.1.0",
     "autoprefixer": "^10.3.5",
@@ -45,7 +44,10 @@
     "mobx-react-lite": "^3.2.1",
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
+    "prop-types": "^15.8.1",
     "re-resizable": "^6.9.8",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-i18next": "^11.18.6",
     "react-json-view": "^1.21.3",
     "react-shadow": "^20.0.0",
@@ -60,7 +62,6 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
     "@types/react": "^17.x",
-    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.x",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.1",
