--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -28,7 +28,8 @@
   },
   "prettier": {
     "tabWidth": 4,
-    "printWidth": 120
+    "printWidth": 120,
+    "singleQuote": true
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
