--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kanaries/graphic-walker",
-  "version": "0.3.6--fix-store-6",
+  "version": "0.3.6",
   "scripts": {
     "dev:front_end": "vite --host",
     "dev": "npm run dev:front_end",
