--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -42,6 +42,7 @@
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
+    "leaflet": "^1.9.4",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "nanoid": "^4.0.2",
@@ -49,6 +50,7 @@
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
     "react-i18next": "^11.18.6",
+    "react-leaflet": "^4.2.1",
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^3.2.4",
@@ -59,6 +61,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^17.x",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.x",
