--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -39,6 +39,7 @@
     "@kanaries/react-beautiful-dnd": "0.0.1",
     "@kanaries/web-data-loader": "^0.1.7",
     "autoprefixer": "^10.3.5",
+    "d3-scale": "^4.0.2",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/d3-scale": "^4.0.3",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^17.x",
     "@types/react-beautiful-dnd": "^13.1.2",
