--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -39,7 +39,9 @@
     "@kanaries/react-beautiful-dnd": "0.0.2",
     "@kanaries/web-data-loader": "^0.1.7",
     "autoprefixer": "^10.3.5",
+    "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
+    "d3-time-format": "^4.1.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
@@ -63,7 +65,9 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/d3-format": "^3.0.1",
     "@types/d3-scale": "^4.0.3",
+    "@types/d3-time-format": "^4.0.0",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^17.x",
