--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -38,6 +38,7 @@
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "0.0.2",
     "@kanaries/web-data-loader": "^0.1.7",
+    "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.3.5",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
