feat: leaflet geojson support (#94)
* feat: leaflet geojson support

* feat(map): scale support

* feat: coord system

* fix: missing marks on container resize

This commit resolves a bug where map markers were not being rendered correctly when the map container was resized. This was achieved by invoking the 'invalidateSize' method on the map instance whenever the container size changed.

* feat: choropleth renderer

* feat: geojson config

* feat(geojson): support gw props

* feat: topojson support

* feat: specify topojson object key for generating geojson

* fix(geo): displayed aggr prefix of dimsensions by mistake

* feat(geo): sync vega format settings

* feat(leaflet): auto adjust default size

* feat(leaflet): new config scaleIncludeUnmatchedChoropleth

* fix: provide value for missing field in encoding

* fix: hide export when is map

---------

Co-authored-by: islxyqwe <islxyqwe123@gmail.com>

--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -40,9 +40,13 @@
     "@kanaries/web-data-loader": "^0.1.7",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.3.5",
+    "d3-format": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-time-format": "^4.1.0",
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
+    "leaflet": "^1.9.4",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "nanoid": "^4.0.2",
@@ -50,9 +54,11 @@
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
     "react-i18next": "^11.18.6",
+    "react-leaflet": "^4.2.1",
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^3.2.4",
+    "topojson-client": "^3.1.0",
     "uuid": "^8.3.2",
     "vega": "^5.22.1",
     "vega-embed": "^6.21.0",
@@ -60,10 +66,16 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/d3-format": "^3.0.1",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-time-format": "^4.0.0",
+    "@types/geojson": "^7946.0.10",
+    "@types/leaflet": "^1.9.3",
     "@types/react": "^17.x",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.x",
     "@types/styled-components": "^5.1.26",
+    "@types/topojson-client": "^3.1.1",
     "@types/uuid": "^8.3.1",
     "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
