--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -53,6 +53,7 @@
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
+    "react-color": "^2.19.3",
     "react-i18next": "^11.18.6",
     "react-leaflet": "^4.2.1",
     "react-shadow": "^20.0.0",
