--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -40,6 +40,7 @@
     "@kanaries/web-data-loader": "^0.1.7",
     "@tailwindcss/forms": "^0.5.4",
     "autoprefixer": "^10.3.5",
+    "canvas-size": "^1.2.6",
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
@@ -53,6 +54,7 @@
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
+    "react-error-boundary": "^4.0.11",
     "react-i18next": "^11.18.6",
     "react-leaflet": "^4.2.1",
     "react-shadow": "^20.0.0",
