--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
+    "react-color": "^2.19.3",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
     "react-i18next": "^11.18.6",
