--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "build:app": "vite build --config vite-app.config.ts",
     "serve": "vite preview",
-    "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist"
+    "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
+    "test": "jest"
   },
   "files": [
     "dist",
@@ -39,6 +40,7 @@
     "@kanaries/react-beautiful-dnd": "^0.0.3",
     "@kanaries/web-data-loader": "^0.1.7",
     "@tailwindcss/forms": "^0.5.4",
+    "@types/jest": "^29.5.3",
     "autoprefixer": "^10.3.5",
     "canvas-size": "^1.2.6",
     "d3-format": "^3.1.0",
@@ -47,6 +49,7 @@
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
+    "jest": "^29.6.2",
     "leaflet": "^1.9.4",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
@@ -62,6 +65,7 @@
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.1.1",
     "topojson-client": "^3.1.0",
     "vega": "^5.22.1",
     "vega-embed": "^6.21.0",
@@ -83,7 +87,7 @@
     "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.3.2",
+    "typescript": "^5.1.6",
     "vite": "^4.1.1"
   },
   "peerDependencies": {
