--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -35,6 +35,7 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@headlessui-float/react": "^0.11.4",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "^0.0.3",
@@ -65,8 +66,8 @@
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^3.2.4",
-    "ts-jest": "^29.1.1",
     "topojson-client": "^3.1.0",
+    "ts-jest": "^29.1.1",
     "vega": "^5.22.1",
     "vega-embed": "^6.21.0",
     "vega-lite": "^5.6.0"
