--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -41,6 +41,7 @@
     "@kanaries/react-beautiful-dnd": "^0.0.3",
     "@kanaries/web-data-loader": "^0.1.7",
     "@tailwindcss/forms": "^0.5.4",
+    "@tanstack/react-virtual": "^3.0.0-beta.68",
     "@types/jest": "^29.5.3",
     "autoprefixer": "^10.3.5",
     "canvas-size": "^1.2.6",
