refactor: split playground
refactor: playground

fix(vercel): debug vercel fk cache

Versioning untracked files

chore: remove node 16 for latest vega-lite

fix: mono repo setup

chore: fix gpt verion

refactor: remove sub-repo

refactor: remove desktop

--- a/.github/workflows/auto-build.yml
+++ b/.github/workflows/auto-build.yml
@@ -1,20 +1,24 @@
 name: Auto Build
 on:
   push:
-    branches: [main, dev]
+    branches: [main]
   pull_request:
-    branches: [main, dev]
+    branches: [main]
 jobs:
   auto-build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x, 20.x]
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn workspace @kanaries/graphic-walker build
+      - name: Install deps
+        run: yarn install
+      - name: npm package build
+        run: yarn workspace @kanaries/graphic-walker build
+      - name: Web app (playground) build
+        run: yarn workspace playground build
