--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -16,5 +16,5 @@ jobs:
         uses: mattzcarey/code-review-gpt@v0.1.4-alpha
         with:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          MODEL: 'gpt-4-turbo'
+          MODEL: 'gpt-4'
           GITHUB_TOKEN: ${{ github.token }}
