fix: missing dep build

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build:gw": "yarn workspace @kanaries/graphic-walker build",
+    "build": "npm run build:gw && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
