--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         run: yarn workspace @kanaries/graphic-walker build
       - name: Web app (playground) build
         run: yarn workspace playground build
-      - run: cd ./packages/graphic-walker
       - run: npm publish
+        working-directory: ./packages/graphic-walker
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
