--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,5 +20,6 @@ jobs:
         run: yarn workspace playground build
       - run: cd ./packages/graphic-walker
       - run: npm publish
+        working-directory: ./packages/graphic-walker
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
