fix: update type/react

--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -84,10 +84,10 @@
     "@types/d3-time-format": "^4.0.0",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.3",
-    "@types/react": "^17.x",
+    "@types/react": "*",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.6",
-    "@types/react-dom": "^17.x",
+    "@types/react-dom": "*",
     "@types/styled-components": "^5.1.26",
     "@types/topojson-client": "^3.1.1",
     "@vercel/analytics": "^0.1.8",
