--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -6,14 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build:gw": "yarn workspace @kanaries/graphic-walker build",
-    "build": "npm run build:gw && tsc && vite build",
+    "build:db": "yarn workspace @kanaries/duckdb-computation build",
+    "build": "npm run build:gw && npm run build:db && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+  },
+  "prettier": {
+    "tabWidth": 4,
+    "printWidth": 160,
+    "singleQuote": true
   },
   "dependencies": {
     "@headlessui/react": "1.7.12",
     "@heroicons/react": "^2.0.8",
     "@kanaries/graphic-walker": "0.4.34",
+    "@kanaries/duckdb-computation": "0.0.1",
     "@vercel/analytics": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
