--- a/packages/duckdb-wasm-computation/package.json
+++ b/packages/duckdb-wasm-computation/package.json
@@ -17,10 +17,10 @@
     "@duckdb/duckdb-wasm": "^1.28.0",
     "@kanaries-temp/gw-dsl-parser": "^0.1.36-rc5",
     "apache-arrow": "^13.0.0",
+    "@kanaries/graphic-walker": "0.4.35",
     "nanoid": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^4.3.2",
-    "@kanaries/graphic-walker": "0.4.34"
+    "typescript": "^4.3.2"
   }
 }
