--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -68,6 +68,7 @@
     "react-error-boundary": "^4.0.11",
     "react-i18next": "^11.18.6",
     "react-leaflet": "^4.2.1",
+    "react-resize-detector": "^9.1.1",
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
     "tailwindcss": "^3.2.4",
