--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -60,6 +60,7 @@
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "nanoid": "^4.0.2",
+    "pgsql-ast-parser": "^11.1.0",
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
     "re-resizable": "^6.9.8",
