--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -95,6 +95,7 @@
     "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
     "styled-components": "^5.3.6",
+    "ts-xor": "^1.3.0",
     "typescript": "^5.1.6",
     "vite": "^4.1.1"
   },
