--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -57,6 +57,7 @@
     "immer": "^9.0.15",
     "jest": "^29.6.2",
     "leaflet": "^1.9.4",
+    "lodash-es": "^4.17.15",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "nanoid": "^4.0.2",
@@ -86,6 +87,7 @@
     "@types/d3-time-format": "^4.0.0",
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.3",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "*",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.6",
