--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -44,6 +44,7 @@
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "^0.1.1",
     "@kanaries/web-data-loader": "^0.1.7",
+    "@radix-ui/react-slider": "^1.1.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-virtual": "^3.0.0-beta.68",
     "@types/jest": "^29.5.3",
