feat: add shadcn

--- a/packages/graphic-walker/tsconfig.json
+++ b/packages/graphic-walker/tsconfig.json
@@ -19,6 +19,12 @@
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   },
   "include": ["src"]
 }
