--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -44,12 +44,15 @@
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "^0.1.1",
     "@kanaries/web-data-loader": "^0.1.7",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-virtual": "^3.0.0-beta.68",
     "@types/jest": "^29.5.3",
     "autoprefixer": "^10.3.5",
     "canvas-size": "^1.2.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
@@ -74,7 +77,9 @@
     "react-resize-detector": "^9.1.1",
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-animate": "^1.0.7",
     "topojson-client": "^3.1.0",
     "ts-jest": "^29.1.1",
     "vega": "^5.22.1",
