--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -44,8 +44,20 @@
     "@heroicons/react": "^2.0.8",
     "@kanaries/react-beautiful-dnd": "^0.1.1",
     "@kanaries/web-data-loader": "^0.1.7",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-virtual": "^3.0.0-beta.68",
     "@types/jest": "^29.5.3",
@@ -74,6 +86,7 @@
     "react-error-boundary": "^4.0.11",
     "react-i18next": "^11.18.6",
     "react-leaflet": "^4.2.1",
+    "react-resizable-panels": "^1.0.10",
     "react-resize-detector": "^9.1.1",
     "react-shadow": "^20.0.0",
     "rxjs": "^7.3.0",
