--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -68,6 +68,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "color-space": "^2.0.1",
+    "color-string": "^1.9.1",
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
     "d3-time-format": "^4.1.0",
@@ -104,6 +106,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.5",
+    "@types/color-string": "^1.5.5",
     "@types/d3-format": "^3.0.1",
     "@types/d3-scale": "^4.0.3",
     "@types/d3-time-format": "^4.0.0",
