--- a/packages/duckdb-wasm-computation/package.json
+++ b/packages/duckdb-wasm-computation/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.28.0",
-    "@kanaries-temp/gw-dsl-parser": "^0.1.42-rc3",
+    "@kanaries/gw-dsl-parser": "^0.1.45-rc4",
     "@kanaries/graphic-walker": "0.4.54",
     "apache-arrow": "^13.0.0",
     "nanoid": "^5.0.1"
