--- a/packages/playground/vercel.json
+++ b/packages/playground/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
       {
-        "source": "/examples/(.*)",
+        "source": "/examples(/.*)?",
         "destination": "/examples.html"
       }
     ]
