--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -5,7 +5,7 @@
     "dev:front_end": "vite --host",
     "dev": "npm run dev:front_end",
     "gen-schema": "node scripts/create-json-schema.js",
-    "build": "vite build && tsc --build && yarn gen-schema",
+    "build": "vite build && tspc --build && yarn gen-schema",
     "build:app": "vite build --config vite-app.config.ts",
     "serve": "vite preview",
     "type": "tsc src/lib.ts --declaration --emitDeclarationOnly --jsx react --esModuleInterop --outDir dist",
@@ -56,6 +56,7 @@
     "@kanaries/react-beautiful-dnd": "^0.1.1",
     "@kanaries/web-data-loader": "^0.1.7",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -135,8 +136,10 @@
     "@vitejs/plugin-react": "^3.1.0",
     "styled-components": "^5.3.6",
     "ts-json-schema-generator": "^1.5.0",
+    "ts-patch": "^3.1.2",
     "ts-xor": "^1.3.0",
     "typescript": "^5.2.2",
+    "typescript-transform-paths": "^3.4.7",
     "vite": "^4.1.1"
   },
   "peerDependencies": {
