--- a/packages/graphic-walker/tsconfig.json
+++ b/packages/graphic-walker/tsconfig.json
@@ -23,7 +23,11 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": ["src"]
 }
