--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -95,6 +95,7 @@
     "pgsql-ast-parser": "^11.1.0",
     "postcss": "^8.3.7",
     "postinstall-postinstall": "^2.1.0",
+    "rbush": "^3.0.1",
     "re-resizable": "^6.9.8",
     "react-color": "^2.19.3",
     "react-dropzone": "^14.2.3",
@@ -124,6 +125,7 @@
     "@types/geojson": "^7946.0.10",
     "@types/leaflet": "^1.9.3",
     "@types/lodash-es": "^4.17.12",
+    "@types/rbush": "^3.0.3",
     "@types/react": "*",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-color": "^3.0.6",
