ci: vercel config updated

--- a/packages/playground/vercel.json
+++ b/packages/playground/vercel.json
@@ -3,6 +3,10 @@
       {
         "source": "/examples(/.*)?",
         "destination": "/examples.html"
+      },
+      {
+        "source": "/gallery(/.*)?",
+        "destination": "/gallery.html"
       }
     ]
   }
