--- a/packages/playground/vercel.json
+++ b/packages/playground/vercel.json
@@ -1,9 +1,12 @@
 {
-    "rewrites": [
-      {
-        "source": "/examples(/.*)?",
-        "destination": "/examples.html"
-      }
-    ]
-  }
-  
+  "rewrites": [
+    {
+      "source": "/examples(/.*)?",
+      "destination": "/examples.html"
+    },
+    {
+      "source": "/gallery(/.*)?",
+      "destination": "/gallery.html"
+    }
+  ]
+}
