--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -87,6 +87,7 @@
     "i18next": "^21.9.1",
     "i18next-browser-languagedetector": "^6.1.5",
     "immer": "^9.0.15",
+    "immutable": "^5.1.1",
     "jest": "^29.6.2",
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.15",
