--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -100,7 +100,7 @@
     "postinstall-postinstall": "^2.1.0",
     "rbush": "^3.0.1",
     "re-resizable": "^6.9.8",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
     "react-i18next": "^11.18.6",
@@ -131,13 +131,10 @@
     "@types/rbush": "^3.0.3",
     "@types/react": "*",
     "@types/react-beautiful-dnd": "^13.1.2",
-    "@types/react-color": "^3.0.6",
     "@types/react-dom": "*",
-    "@types/styled-components": "^5.1.26",
     "@types/topojson-client": "^3.1.1",
     "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
-    "styled-components": "^5.3.6",
     "ts-json-schema-generator": "^1.5.0",
     "ts-patch": "^3.1.2",
     "ts-xor": "^1.3.0",
@@ -147,7 +144,6 @@
   },
   "peerDependencies": {
     "react": ">=17.0.0 <19.0.0",
-    "react-dom": ">=17.0.0 <19.0.0",
-    "styled-components": "^5.3.6"
+    "react-dom": ">=17.0.0 <19.0.0"
   }
 }
