--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -24,7 +24,7 @@
     "@vercel/analytics": "^1.1.1",
     "color-space": "^2.0.1",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
