--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "@types/react": "^18.x",
     "@types/react-dom": "^18.x"
   },
-  "homepage": "https://github.com/Kanaries/graphic-walker#readme"
+  "homepage": "https://github.com/Kanaries/graphic-walker#readme",
+  "engines": {
+    "node": ">=20.0.0"
+  }
 }
