feat: plotly test

--- a/packages/graphic-walker-plotly-renderer/package.json
+++ b/packages/graphic-walker-plotly-renderer/package.json
@@ -32,11 +32,13 @@
   },
   "peerDependencies": {
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-dom": ">=16.8.0",
+    "plotly.js": "^2.0.0 || ^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/node": "^20.10.0",
+    "@types/plotly.js": "^3.0.3",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
