--- a/packages/graphic-walker-plotly-renderer/package.json
+++ b/packages/graphic-walker-plotly-renderer/package.json
@@ -37,17 +37,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@kanaries/graphic-walker": "*",
     "@types/node": "^20.10.0",
     "@types/plotly.js": "^3.0.3",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
