--- a/packages/graphic-walker/package.json
+++ b/packages/graphic-walker/package.json
@@ -48,39 +48,38 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
-    "@headlessui-float/react": "^0.11.4",
     "@headlessui/react": "1.7.12",
-    "@heroicons/react": "^2.0.8",
+    "@heroicons/react": "^2.2.0",
     "@kanaries/react-beautiful-dnd": "^0.1.1",
     "@kanaries/web-data-loader": "^0.1.7",
     "@observablehq/plot": "^0.6.16",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/forms": "^0.5.4",
-    "@tanstack/react-virtual": "^3.0.0-beta.68",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/jest": "^29.5.3",
     "autoprefixer": "^10.3.5",
     "canvas-size": "^1.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
-    "color-space": "^2.0.1",
+    "cmdk": "^1.1.1",
+    "color-space": "2.0.1",
     "color-string": "^1.9.1",
     "d3-format": "^3.1.0",
     "d3-scale": "^4.0.2",
@@ -107,7 +106,7 @@
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^1.0.10",
     "react-resize-detector": "^9.1.1",
-    "react-shadow": "^20.0.0",
+    "react-shadow": "^20.6.0",
     "rxjs": "^7.3.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.2.4",
@@ -137,7 +136,7 @@
     "@types/topojson-client": "^3.1.1",
     "@vercel/analytics": "^0.1.8",
     "@vitejs/plugin-react": "^3.1.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^6.1.19",
     "ts-json-schema-generator": "^1.5.0",
     "ts-patch": "^3.1.2",
     "ts-xor": "^1.3.0",
@@ -146,8 +145,8 @@
     "vite": "^4.1.1"
   },
   "peerDependencies": {
-    "react": ">=17.0.0 <19.0.0",
-    "react-dom": ">=17.0.0 <19.0.0",
-    "styled-components": "^5.3.6"
+    "react": ">=19.0.0",
+    "react-dom": ">=19.0.0",
+    "styled-components": "^6.1.19"
   }
 }
