--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -22,10 +22,10 @@
     "@kanaries/duckdb-computation": "0.0.1",
     "@kanaries/graphic-walker": "0.4.77",
     "@vercel/analytics": "^1.1.1",
-    "color-space": "^2.0.1",
-    "react": "^18.2.0",
+    "color-space": "2.0.1",
+    "react": "^19.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.2.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-syntax-highlighter": "^15.5.0"
